syntax = "proto3";
package kratos.api;

option go_package = "app/user/service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Auth auth = 3;
}

message Server {
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message Tracer {
    Jaeger jaeger = 1;
  }
  message Jaeger {
    string endpoint = 1;
  }
  GRPC grpc = 1;
  Tracer tracer = 2;
}

message Data {
  message Database {
    string source = 1;
    int32 max_idle_conn = 2;
    int32 max_open_conn = 3;
    google.protobuf.Duration conn_lifetime = 4;
    int32 log_level = 5;
  }
  message Consul {
    string address = 1;
    string scheme = 2;
    string path_prefix = 3;
    string data_center = 4;
    google.protobuf.Duration wait_time = 5;
    string token = 6;
    string token_file = 7;
    string namespace = 8;
    string partition = 9;
  }
  Database mysql = 1;
  Consul consul = 2;
}

message Auth {
  message Jwt {
    string key = 1;
    string issue = 2;
  }
  Jwt jwt = 1;
}